# Rust-TradeOgre-Bot

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  start.sh
src/: main.rs
src/lib/: vector_store.rs
src/logging/: fancy_log.rs
src/net/: csv_download.rs  trading_api.rs
src/utils/: load_config.rs  reader.rs  trading_utils.rs
