[package]
name = "candlestickdetector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
ndarray = "0.15.3"
reqwest = {version = "0.11.23", features = ["blocking", "json"] }
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
colored = "2.0.4"
chrono = "0.4.32"
toml = "0.8.8"
once_cell = "1.19.0"
base64 = "0.21.7"
